# chirp

./: .gitignore  .hgignore  .hgtags  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  INSTALL.Debian_Devuan  Icom_IC-R6.img  MANIFEST.in  README  README.chirpc  README.dev-process.txt  README.developers  README.md  README.rpttool  SECURITY.md  chirp.desktop  chirp.py  chirp.xsd  chirp_banks.xsd  chirp_memory.xsd  chirpc  chirpw  chirpw.py  chirpwx.py  csvdump.py  flake.nix  h777.py  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  rpttool  run_all_tests.bat  run_all_tests.sh  setup.cfg  (+4 more)
.github/: CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
UV17-dumps/: Baofeng_UV-17ProGPS_20230927.img  Baofeng_UV-17ProGPS_Default.img  Baofeng_UV-17Pro_default.img  JimFanning_Baofeng_UV-17ProGPS_20230926.img  JimFanning_Baofeng_UV-17ProGPS_20230929broken.img  VHF_TX_off.csv
chirp/: __init__.py  alinco.py  anytone.py  ap510.py  bandplan.py  bandplan_au.py  bandplan_iaru_r1.py  bandplan_iaru_r2.py  bandplan_iaru_r3.py  bandplan_na.py  baofeng_uv3r.py  bitwise.py  bitwise_grammar.py  bjuv55.py  checksum.py  chirp_common.py  convert_icf.py  crc.py  csv.py  detect.py  directory.py  dmrmarc.py  elib_intl.py  errors.py  ft1802.py  ft1d.py  ft2800.py  ft2900.py  ft50.py  ft50_ll.py  ft60.py  ft7800.py  ft7800_ll.py  ft817.py  ft857.py  ft90.py  ftm350.py  generic_csv.py  generic_tpe.py  generic_xml.py  (+75 more)
chirpui/: __init__.py  bandplans.py  bankedit.py  clone.py  cloneprog.py  common.py  config.py  dstaredit.py  editorset.py  fips.py  importdialog.py  inputdialog.py  mainapp.py  memdetail.py  memedit.py  miscwidgets.py  radiobrowser.py  reporting.py  settingsedit.py  shiftdialog.py
csvdump/: __init__.py  cloneprog.py  csvapp.py  csvdump.py  inputdialog.py  miscwidgets.py  platform.py
flathub/: README.md  chirp-wrapper.sh  com.chirpmyradio.chirp.metainfo.xml
locale/: Makefile  check_parameters.py  de.po  en_US.po  es_ES.po  fr.po  hu.po  it.po  nl.po  pl.po  pt_BR.po  ru.po  ru_Ru.po  tr_TR.po  zh_CN.po
repidr/: errors.py  ic9x.py  ic9x_ll.py  id800.py  id800_ll.py  repidr_common.py  util.py
share/: chirp.desktop  chirp.icns  chirpw.1  make_supported.py  model_alias_map.yaml
snap/: snapcraft.yaml
stock_configs/: EU LPD and PMR Channels.csv  FR Marine VHF Channels.csv  Marine VHF Channels.csv  NOAA Weather Alert.csv  SE Jaktradio 155MHz.csv  UK Business Radio Simple Light Frequencies.csv  US 60 meter channels (Center).csv  US 60 meter channels (Dial).csv  US Calling Frequencies.csv  US FRS and GMRS Channels.csv  US MURS Channels.csv  US Marine VHF Channels.csv
tests/: Python3_Driver_Testing.md  __init__.py  base.py  (+19 more)
(+822 files in other folders)
